Ejercicio 2 y cambio menor en 1

--- a/Ejercicio-1/index.html
+++ b/Ejercicio-1/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container d-flex justify-content-center align-items-center h-100 container-sm w-80 container-sm">
+    <div class="container d-flex justify-content-center align-items-center h-100">
         <div class="row principal">
             <div class="col">
                 <div class="row">
