--- a/Ejercicio-2/index.html
+++ b/Ejercicio-2/index.html
@@ -49,7 +49,7 @@
                         placeholder="Enter your message for us here. We will get back to you within 2 business days"></textarea></div>
             </div>
             
-            <div class="row haha">
+            <div class="row padding">
                 <div class="col text-center Submit">
                     <button type="button" class="btn btn-primary">Submit</button>
                 </div>
